lib/src/mediapipe_face_bindings_generated.dart


  ffi.Pointer<ffi.Char> mp_blendshapes_last_global_error() {
    return _mp_blendshapes_last_global_error();
  }

  late final _mp_blendshapes_last_global_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'mp_blendshapes_last_global_error',
      );
  late final _mp_blendshapes_last_global_error =
      _mp_blendshapes_last_global_errorPtr
          .asFunction<ffi.Pointer<ffi.Char> Function()>();

  MpDelegateType mp_blendshapes_active_delegate(
    ffi.Pointer<MpBlendshapesContext> context,
  ) {
    return MpDelegateType.fromValue(_mp_blendshapes_active_delegate(context));
  }

  late final _mp_blendshapes_active_delegatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<MpBlendshapesContext>)
        >
      >('mp_blendshapes_active_delegate');
  late final _mp_blendshapes_active_delegate =
      _mp_blendshapes_active_delegatePtr
          .asFunction<int Function(ffi.Pointer<MpBlendshapesContext>)>();

  ffi.Pointer<MpFaceDetectorContext> mp_face_detector_create(
    ffi.Pointer<ffi.Char> model_path,
    ffi.Pointer<MpFaceDetectorCreateOptions> options,
  ) {
    return _mp_face_detector_create(model_path, options);
  }

  late final _mp_face_detector_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpFaceDetectorContext> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<MpFaceDetectorCreateOptions>,
          )
        >
      >('mp_face_detector_create');
  late final _mp_face_detector_create = _mp_face_detector_createPtr
      .asFunction<
        ffi.Pointer<MpFaceDetectorContext> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<MpFaceDetectorCreateOptions>,
        )
      >();

  void mp_face_detector_destroy(ffi.Pointer<MpFaceDetectorContext> context) {
    return _mp_face_detector_destroy(context);
  }

  late final _mp_face_detector_destroyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<MpFaceDetectorContext>)
        >
      >('mp_face_detector_destroy');
  late final _mp_face_detector_destroy = _mp_face_detector_destroyPtr
      .asFunction<void Function(ffi.Pointer<MpFaceDetectorContext>)>();

  ffi.Pointer<MpFaceDetectorResult> mp_face_detector_process(
    ffi.Pointer<MpFaceDetectorContext> context,
    ffi.Pointer<MpImage> image,
    ffi.Pointer<MpNormalizedRect> override_rect,
    int rotation_degrees,
    int mirror_horizontal,
    ffi.Pointer<MpRoiTransformOptions> roi_transform,
  ) {
    return _mp_face_detector_process(
      context,
      image,
      override_rect,
      rotation_degrees,
      mirror_horizontal,
      roi_transform,
    );
  }

  late final _mp_face_detector_processPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpFaceDetectorResult> Function(
            ffi.Pointer<MpFaceDetectorContext>,
            ffi.Pointer<MpImage>,
            ffi.Pointer<MpNormalizedRect>,
            ffi.Int32,
            ffi.Uint8,
            ffi.Pointer<MpRoiTransformOptions>,
          )
        >
      >('mp_face_detector_process');
  late final _mp_face_detector_process = _mp_face_detector_processPtr
      .asFunction<
        ffi.Pointer<MpFaceDetectorResult> Function(
          ffi.Pointer<MpFaceDetectorContext>,
          ffi.Pointer<MpImage>,
          ffi.Pointer<MpNormalizedRect>,
          int,
          int,
          ffi.Pointer<MpRoiTransformOptions>,
        )
      >();

  ffi.Pointer<MpFaceDetectorResult> mp_face_detector_process_nv21(
    ffi.Pointer<MpFaceDetectorContext> context,
    ffi.Pointer<MpNv21Image> image,
    ffi.Pointer<MpNormalizedRect> override_rect,
    int rotation_degrees,
    int mirror_horizontal,
    ffi.Pointer<MpRoiTransformOptions> roi_transform,
  ) {
    return _mp_face_detector_process_nv21(
      context,
      image,
      override_rect,
      rotation_degrees,
      mirror_horizontal,
      roi_transform,
    );
  }

  late final _mp_face_detector_process_nv21Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpFaceDetectorResult> Function(
            ffi.Pointer<MpFaceDetectorContext>,
            ffi.Pointer<MpNv21Image>,
            ffi.Pointer<MpNormalizedRect>,
            ffi.Int32,
            ffi.Uint8,
            ffi.Pointer<MpRoiTransformOptions>,
          )
        >
      >('mp_face_detector_process_nv21');
  late final _mp_face_detector_process_nv21 = _mp_face_detector_process_nv21Ptr
      .asFunction<
        ffi.Pointer<MpFaceDetectorResult> Function(
          ffi.Pointer<MpFaceDetectorContext>,
          ffi.Pointer<MpNv21Image>,
          ffi.Pointer<MpNormalizedRect>,
          int,
          int,
          ffi.Pointer<MpRoiTransformOptions>,
        )
      >();

  void mp_face_detector_release_result(
    ffi.Pointer<MpFaceDetectorResult> result,
  ) {
    return _mp_face_detector_release_result(result);
  }

  late final _mp_face_detector_release_resultPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<MpFaceDetectorResult>)>
      >('mp_face_detector_release_result');
  late final _mp_face_detector_release_result =
      _mp_face_detector_release_resultPtr
          .asFunction<void Function(ffi.Pointer<MpFaceDetectorResult>)>();

  ffi.Pointer<ffi.Char> mp_face_detector_last_error(
    ffi.Pointer<MpFaceDetectorContext> context,
  ) {
    return _mp_face_detector_last_error(context);
  }

  late final _mp_face_detector_last_errorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<MpFaceDetectorContext>)
        >
      >('mp_face_detector_last_error');
  late final _mp_face_detector_last_error = _mp_face_detector_last_errorPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<MpFaceDetectorContext>)
      >();

  ffi.Pointer<ffi.Char> mp_face_detector_last_global_error() {
    return _mp_face_detector_last_global_error();
  }

  late final _mp_face_detector_last_global_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'mp_face_detector_last_global_error',
      );
  late final _mp_face_detector_last_global_error =
      _mp_face_detector_last_global_errorPtr
          .asFunction<ffi.Pointer<ffi.Char> Function()>();

  MpDelegateType mp_face_detector_active_delegate(
    ffi.Pointer<MpFaceDetectorContext> context,
  ) {
    return MpDelegateType.fromValue(_mp_face_detector_active_delegate(context));
  }

  late final _mp_face_detector_active_delegatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<MpFaceDetectorContext>)
        >
      >('mp_face_detector_active_delegate');
  late final _mp_face_detector_active_delegate =
      _mp_face_detector_active_delegatePtr
          .asFunction<int Function(ffi.Pointer<MpFaceDetectorContext>)>();
}

final class MpFaceMeshContext extends ffi.Opaque {}

final class MpFaceDetectorContext extends ffi.Opaque {}

enum MpPixelFormat {
  MP_PIXEL_FORMAT_RGBA(0),
  MP_PIXEL_FORMAT_BGRA(1);

  final int value;
  const MpPixelFormat(this.value);

  static MpPixelFormat fromValue(int value) => switch (value) {
    0 => MP_PIXEL_FORMAT_RGBA,
    1 => MP_PIXEL_FORMAT_BGRA,
    _ => throw ArgumentError("Unknown value for MpPixelFormat: $value"),
  };
}

enum MpDelegateType {
  MP_DELEGATE_CPU(0),
  MP_DELEGATE_XNNPACK(1),
  MP_DELEGATE_GPU_V2(2);

  final int value;
  const MpDelegateType(this.value);

  static MpDelegateType fromValue(int value) => switch (value) {
    0 => MP_DELEGATE_CPU,
    1 => MP_DELEGATE_XNNPACK,
    2 => MP_DELEGATE_GPU_V2,
    _ => throw ArgumentError("Unknown value for MpDelegateType: $value"),
  };
}

final class MpImage extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int bytes_per_row;

  @ffi.UnsignedInt()
  external int format;
}

/// Android camera NV21 input (Y plane + interleaved VU plane).
final class MpNv21Image extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> y;

  external ffi.Pointer<ffi.Uint8> vu;

  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int y_bytes_per_row;

  @ffi.Int32()
  external int vu_bytes_per_row;
}

final class MpNormalizedRect extends ffi.Struct {
  @ffi.Float()
  external double x_center;

  @ffi.Float()
  external double y_center;

  @ffi.Float()
  external double width;

  @ffi.Float()
  external double height;

  @ffi.Float()
  external double rotation;
}

final class MpLandmark extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double z;
}

final class MpFaceMeshResult extends ffi.Struct {
  external ffi.Pointer<MpLandmark> landmarks;

  @ffi.Int32()
  external int landmarks_count;

  external MpNormalizedRect rect;

  @ffi.Float()
  external double score;

  @ffi.Int32()
  external int image_width;

  @ffi.Int32()
  external int image_height;
}

final class MpFaceGeometryOptions extends ffi.Struct {
  /// Vertical field of view of the virtual camera in degrees.
  @ffi.Float()
  external double vertical_fov_degrees;

  /// Near and far clip planes of the virtual frustum in the same units as the
  /// output metric landmarks (centimeters).
  @ffi.Float()
  external double near_plane;

  @ffi.Float()
  external double far_plane;

  /// Non-zero when input normalized landmarks use a top-left image origin.
  /// This matches FaceMeshResult landmarks returned by this plugin.
  @ffi.Uint8()
  external int origin_top_left;
}

final class MpFaceGeometryResult extends ffi.Struct {
  /// Landmarks reprojected into centimeter-scale metric space.
  external ffi.Pointer<MpLandmark> metric_landmarks;

  @ffi.Int32()
  external int metric_landmarks_count;

  /// Row-major 4x4 similarity transform from canonical face space to camera
  /// space. Encodes rotation, translation, and uniform scale.
  @ffi.Array.multi([16])
  external ffi.Array<ffi.Float> pose_transform_matrix;

  @ffi.Float()
  external double yaw_degrees;

  @ffi.Float()
  external double pitch_degrees;

  @ffi.Float()
  external double roll_degrees;

  /// Uniform scale factor from the Procrustes fit: ratio of the observed face
  /// size to the canonical model size in centimeters.
  @ffi.Float()
  external double scale;
}

final class MpFaceMeshCreateOptions extends ffi.Struct {
  external ffi.Pointer<ffi.Char> tflite_library_path;

  external ffi.Pointer<ffi.Char> iris_model_path;

  @ffi.Int32()
  external int threads;

  @ffi.Float()
  external double min_detection_confidence;

  @ffi.Float()
  external double min_tracking_confidence;

  @ffi.Float()
  external double min_face_presence_confidence;

  @ffi.UnsignedInt()
  external int delegate;

  @ffi.Uint8()
  external int enable_smoothing;

  @ffi.Uint8()
  external int enable_roi_tracking;

  @ffi.Uint8()
  external int enable_iris;

  /// When non-zero, fail creation instead of falling back to CPU if the
  /// requested delegate is unavailable or cannot be created.
  @ffi.Uint8()
  external int disable_delegate_fallback;
}

final class MpDetection extends ffi.Struct {
  @ffi.Float()
  external double left;

  @ffi.Float()
  external double top;

  @ffi.Float()
  external double right;

  @ffi.Float()
  external double bottom;

  @ffi.Float()
  external double score;

  @ffi.Array.multi([12])
  external ffi.Array<ffi.Float> keypoints;

  external MpNormalizedRect face_rect;

  external MpNormalizedRect expanded_face_rect;
}

final class MpFaceDetectorResult extends ffi.Struct {
  external ffi.Pointer<MpDetection> detections;

  @ffi.Int32()
  external int detections_count;

  @ffi.Int32()
  external int image_width;

  @ffi.Int32()
  external int image_height;
}

final class MpFaceDetectorCreateOptions extends ffi.Struct {
  external ffi.Pointer<ffi.Char> tflite_library_path;

  @ffi.Int32()
  external int threads;
